fix: align close and history buttons with official 50x9px style

--- a/modules/game_rewardwall/game_rewardwall.css
+++ b/modules/game_rewardwall/game_rewardwall.css
@@ -218,10 +218,18 @@
   float: right;
   text-align: center;
   vertical-align: center;
+  width: 50px;
+  height: 9px;
+  font: cipsoftFont;
+  color: #dfdfdf;
 }
 .history-button {
   float: right;
   margin-right: 10px;
+  width: 50px;
+  height: 9px;
+  font: cipsoftFont;
+  color: #dfdfdf;
 }
 
 .imgBonusesCss {
